<resources>
    <string name="app_name">Task1</string>
    <string name="Name">Dart Murzikus</string>
    <string name="settings">Settings</string>
    <string name="job">Graphic Designer</string>
    <string name="home_address">Home address</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="userPhoto">userPhoto</string>
    <string name="fill_out_profile">Go to settings and fill out the profile</string>
    <string name="get_acquainted">Let\'s get acquainted</string>
    <string name="fill_text_invite">Fill out the profile and go to the application!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="google">GOOGLE</string>
    <string name="or">or</string>
    <string name="register">REGISTER</string>
    <string name="agree">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="invalid_password">Minimum eight characters, at least one uppercase letter, one lowercase letter and one number</string>
    <string name="invalid_email">Invalid e-mail</string>
</resources>