<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/default_color"
    android:padding="@dimen/SignUpPagePadding"
    android:layout_marginTop="@dimen/margin_from_start">
    <TextView
        android:id="@+id/tvGetAcquainted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/white"
        android:text="@string/get_acquainted"
        android:textSize="@dimen/largeFontSize"
        app:layout_constraintBottom_toTopOf="@id/tvSmallInvite"
        android:fontFamily="@font/montserrat_regular"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginBottom="@dimen/small_margin">
    </TextView>

    <TextView
        android:id="@+id/tvSmallInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/fill_text_invite"
        android:textSize="@dimen/smallFontSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGetAcquainted"
        app:layout_constraintBottom_toBottomOf="@id/tvEmail"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginBottom="@dimen/large_margin">
    </TextView>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:text="@string/e_mail"
        android:textSize="@dimen/smallFontSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etEmailInput"
        app:layout_constraintTop_toBottomOf="@id/tvSmallInvite"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginStart="@dimen/margin_for_input">
    </TextView>
    
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintBottom_toTopOf="@id/password"
        android:textColor="@color/white"
        android:textSize="@dimen/nameFontSize"
        android:backgroundTint="@color/grey">
    </androidx.appcompat.widget.AppCompatEditText>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:text="@string/password"
        android:textSize="@dimen/smallFontSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_input"
        app:layout_constraintTop_toBottomOf="@id/etEmailInput"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginStart="@dimen/margin_for_input">
    </TextView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:textSize="@dimen/nameFontSize"
        android:backgroundTint="@color/grey"
        android:inputType="textPassword">
    </androidx.appcompat.widget.AppCompatEditText>

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/margin_4dp"
        android:button="@drawable/ic_radio_button_empty"
        android:buttonTint="@color/white"
        android:text="@string/remember_me"
        android:checked="false"
        android:textColor="@color/grey"
        android:textSize="@dimen/smallFontSize"
        android:paddingStart="@dimen/small_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWhiteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tvOr"
        android:background="@drawable/slightly_rounded_corner"
        android:backgroundTint="@color/white"
        android:layout_marginBottom="8dp">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogleLogo"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/ic_google_logo"
        app:layout_constraintStart_toStartOf="@+id/btnWhiteButton"
        app:layout_constraintTop_toTopOf="@id/btnWhiteButton"
        app:layout_constraintBottom_toBottomOf="@id/btnWhiteButton"
        app:layout_constraintEnd_toStartOf="@id/btnGoogleText"
        app:layout_constraintHorizontal_chainStyle="packed">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:textSize="@dimen/mediumFontSize"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@id/btnGoogleLogo"
        app:layout_constraintTop_toTopOf="@id/btnWhiteButton"
        app:layout_constraintEnd_toEndOf="@+id/btnWhiteButton">
    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/nameFontSize"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/small_margin">
    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/register"
        android:fontFamily="@font/montserrat_regular"
        android:padding="@dimen/padding14dp"
        android:background="@drawable/rounded_corner_and_stroke"
        app:layout_constraintBottom_toTopOf="@id/tvAgree"
        android:layout_marginBottom="@dimen/small_margin">
    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/tvAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tvAgreeCont"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

    <TextView
        android:id="@+id/tvAgreeCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_cont"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvAlreadyHaveAcc"
        android:layout_marginBottom="@dimen/small_margin">
    </TextView>

    <TextView
        android:id="@+id/tvAlreadyHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="@color/grey"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/smallFontSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="@dimen/margin12dp">
    </TextView>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/smallFontSize"
        app:layout_constraintStart_toEndOf="@id/tvAlreadyHaveAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>