<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myProfile"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_upperBlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/default_color"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.5">

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/settings_margin"
            android:layout_marginTop="@dimen/settings_margin"
            android:text="@string/settings"
            android:textColor="@color/text_color"
            android:textSize="@dimen/largeFontSize"
            android:fontFamily="@font/montserrat_regular"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ib_picture"
            app:layout_constraintBottom_toBottomOf="@id/tv_career"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/smallPadding"
            android:text="@string/Name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/nameFontSize"
            android:fontFamily="@font/montserrat_regular"
            />

        <TextView
            android:id="@+id/tv_career"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_address"
            android:layout_marginTop="8dp"
            android:text="@string/job"
            android:textColor="@color/text_color"
            android:textSize="@dimen/smallFontSize"
            android:fontFamily="@font/montserrat_regular"
            />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"
            android:text="@string/home_address"
            android:textColor="@color/text_color"
            android:textSize="@dimen/smallFontSize"
            android:fontFamily="@font/montserrat_regular"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ib_picture"
            android:layout_width="113dp"
            android:layout_height="113dp"
            android:scaleType="centerCrop"
            android:src="@drawable/babyyoda"
            app:layout_constraintBottom_toTopOf="@id/tv_name"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:contentDescription="@string/userPhoto"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_lowerBlock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/lower_block"
        app:layout_constraintTop_toBottomOf="@id/cl_upperBlock">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_contactsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:background="@drawable/slightly_rounded_corner"
                android:backgroundTint="@color/buttonsColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/view_my_contacts"
                android:textColor="@color/lower_block"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/mediumFontSize"
                android:padding="@dimen/mediumPadding"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_editButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:background="@drawable/medium_rounded_corner"
                app:layout_constraintBottom_toTopOf="@id/btn_contactsButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/edit_profile"
                android:textColor="@color/edit_button_color"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/smallFontSize"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="@dimen/smallPadding"
                />

            <TextView
                android:id="@+id/tv_fillProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                app:layout_constraintBottom_toTopOf="@id/btn_editButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/fill_out_profile"
                android:textColor="@color/text_color"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/smallFontSize"
                />

            <ImageButton
                android:id="@+id/ib_fbLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ib_linkednLogo"
                android:background="@drawable/ic_fb_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_contactsButton"
                app:layout_constraintVertical_bias="0.2"/>

            <ImageButton
                android:id="@+id/ib_linkednLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ib_fbLogo"
                app:layout_constraintEnd_toStartOf="@id/ib_instLogo"
                android:background="@drawable/ic_linkedn_logo"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_contactsButton"
                app:layout_constraintVertical_bias="0.2"/>

            <ImageButton
                android:id="@+id/ib_instLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ib_linkednLogo"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/ic_inst_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_contactsButton"
                app:layout_constraintVertical_bias="0.2"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
